# doc-flow

./: ARCH.md  INFO.md  README.md  SYS.md  docker-compose.yml
apps/api/: .env  .env.example  .gitignore  Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  celerybeat-schedule.dir  pyproject.toml
apps/api/src/app/: app.py  celery_dev.py  cli.py  config.py  factory.py  main.py  socket_manager.py
apps/api/src/app/domain/entities/: document_job.py
apps/api/src/app/entrypoints/: api.py  beat.py  worker.py
apps/api/src/app/http/auth/: routes.py
apps/api/src/app/http/documents/: routes.py  schemas.py
apps/api/src/app/infra/: utils.py
apps/api/src/app/infra/db/: db.py
apps/api/src/app/infra/models/: client_storage_model.py  document_job_model.py
apps/api/src/app/realtime/: core.py  listener.py  redis_listener.py
apps/api/src/app/repositories/: client_storage_repository.py  document_repository.py
apps/api/src/app/services/: document_service.py
apps/api/src/app/workers/: celery_app.py
apps/api/src/app/workers/converters/: docx_to_markdown.py  docx_to_pdf.py  txt_to_pdf.py
apps/api/src/app/workers/tasks/: cleanup_old_files.py  conversion_worker.py
apps/api/src/domain/entities/: __init__.py  client_storage.py  document_job.py
apps/api/src/domain/enums/: __init__.py  conversion_type.py  job_status.py
apps/api/src/entrypoints/: api.py  beat.py  worker.py
apps/api/src/http/auth/: routes.py  schemas.py
apps/api/src/http/documents/: routes.py  schemas.py
apps/api/src/http/health/: routes.py
apps/api/src/infra/db/: db.py
apps/api/src/infra/models/: client_storage_model.py  document_job_model.py
apps/api/src/infra/redis/: client.py  redis_pub.py
apps/api/src/infra/storage/: utils.py
apps/api/src/infrastructure/models/: client_storage_model.py  document_job_model.py
apps/api/src/infrastructure/storage/: utils.py
apps/api/src/notifications/: redis_pub.py
apps/api/src/repositories/: client_storage_repository.py  document_repository.py
apps/api/src/services/: document_service.py
apps/api/src/socket/: core.py  listener.py  redis_listener.py  server.py
apps/api/src/workers/: celery_app.py  cleanup_old_files.py  conversion_worker.py
apps/api/src/workers/converters/: csv_to_json.py  csv_to_xlsx.py  docx_to_markdown.py  docx_to_pdf.py  pdf_to_text.py  txt_to_pdf.py  xlsx_to_csv.py
apps/api/src/workers/tasks/: cleanup_old_files.py  conversion_worker.py
apps/api/tests/unit/domain/: test_client_storage.py  test_document_job.py
apps/api/tests/unit/services/: test_document_service.py
apps/web/: Dockerfile  package.json  (+1 more)
test_files/: csv_teste.csv  xlsx_teste.xlsx
(+15 files in other folders)
