[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo",email = "santos934510@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-restx (>=1.3.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
start = "app.cli:start"